--- a/stylus/require/partners.styl
+++ b/stylus/require/partners.styl
@@ -48,6 +48,7 @@
     &.expanded
         max-height 100vh
         opacity 1
+        z-index auto
 
     // trigger scaleY animation when row of expanded partner changes
     &.row-expanded
